@@ -1,9 +1,9 @@
 class Comment < ActiveRecord::Base
   # Named Scopes
   scope :current, :conditions => { :deleted => false }
-  scope :with_object_model, lambda { |*args|  { :conditions => ["comments.object_model IN (?)", args.first] } }
-  scope :with_object_id, lambda { |*args|  { :conditions => ["comments.object_id IN (?)", args.first] } }
-  scope :with_two_object_models_and_ids, lambda { |*args|  { :conditions => ["(comments.object_model IN (?) and comments.object_id IN (?)) or (comments.object_model IN (?) and comments.object_id IN (?))", args[0], args[1], args[2], args[3]] } }
+  scope :with_class_name, lambda { |*args|  { :conditions => ["comments.class_name IN (?)", args.first] } }
+  scope :with_class_id, lambda { |*args|  { :conditions => ["comments.class_id IN (?)", args.first] } }
+  scope :with_two_class_names_and_ids, lambda { |*args|  { :conditions => ["(comments.class_name IN (?) and comments.class_id IN (?)) or (comments.class_name IN (?) and comments.class_id IN (?))", args[0], args[1], args[2], args[3]] } }
   scope :search, lambda { |*args| {:conditions => [ 'LOWER(description) LIKE ?', '%' + args.first.downcase.split(' ').join('%') + '%' ] } }
   scope :with_creator, lambda { |*args|  { :conditions => ["comments.user_id IN (?)", args.first] } }
   scope :with_date_for_calendar, lambda { |*args| { :conditions => ["DATE(comments.created_at) >= ? and DATE(comments.created_at) <= ?", args.first, args[1]]}}
@@ -35,22 +35,22 @@ class Comment < ActiveRecord::Base
   end
   
   def comments(limit = nil)
-    Comment.current.with_object_model(self.class.name).with_object_id(self.id).order('created_at desc').limit(limit)
+    Comment.current.with_class_name(self.class.name).with_class_id(self.id).order('created_at desc').limit(limit)
   end
   
   def new_comment(current_user, description)
-    Comment.create(:object_model => self.class.name, :object_id => self.id, :user_id => current_user.id, :description => description)
+    Comment.create(:class_name => self.class.name, :class_id => self.id, :user_id => current_user.id, :description => description)
   end
   
   private
   
   def send_email
-    @object = self.object_model.constantize.find_by_id(self.object_id)
+    @object = self.class_name.constantize.find_by_id(self.class_id)
     all_users = (@object.comments.collect{|c| c.user} + [@object.user, @object.owner]).compact.uniq - [self.user]
     all_users.each do |user_to_email|
       if user_to_email.active_for_authentication? and user_to_email.email_on?(:send_email) and
-        ((self.object_model == 'Project' and user_to_email.email_on?(:project_comments) and user_to_email.email_on?("project_#{self.object_id}")) or
-        (self.object_model == 'Sticky' and user_to_email.email_on?(:sticky_comments) and user_to_email.email_on?("project_#{Sticky.find_by_id(self.object_id).project.id}")))
+        ((self.class_name == 'Project' and user_to_email.email_on?(:project_comments) and user_to_email.email_on?("project_#{self.class_id}")) or
+        (self.class_name == 'Sticky' and user_to_email.email_on?(:sticky_comments) and user_to_email.email_on?("project_#{Sticky.find_by_id(self.class_id).project.id}")))
         UserMailer.comment_by_mail(self, @object, user_to_email).deliver if Rails.env.production?
       end
     end
