@@ -16,12 +16,12 @@
     <legend><%= @title %></legend>
     <% if false %>
     <div class="field">
-      <%= f.label :object_model %><br />
-      <%= f.text_field :object_model %>
+      <%= f.label :class_name %><br />
+      <%= f.text_field :class_name %>
     </div>
     <div class="field">
-      <%= f.label :object_id %><br />
-      <%= f.text_field :object_id %>
+      <%= f.label :class_id %><br />
+      <%= f.text_field :class_id %>
     </div>
     <% end %>
     <div class="field">
