@@ -4,7 +4,7 @@
     <% width = '98%' %>
     <% class_name = @object.class.name.downcase %>
     <% form_name = "#{class_name}_#{@object.id}_comment_#{@position}_form" %>
-    <%= form_tag add_comment_table_comments_path(:object_id => @object.id, :object_model => @object.class, :position => @position), :remote => true, :id => form_name do %>
+    <%= form_tag add_comment_table_comments_path(:class_id => @object.id, :class_name => @object.class, :position => @position), :remote => true, :id => form_name do %>
       <%= hidden_field_tag :position, @position %>
       <%= text_area_tag "#{class_name}[#{@object.id}][comment][#{@position}]", '', :name => 'comment', :rows => 2, :style => "width:#{width}" %>
       <br />
